fix modal overflow

--- a/css.css
+++ b/css.css
@@ -504,6 +504,7 @@ figure > img {
   right: 5vw;
   transition-duration: .3s;
   top: 5vw;
+  z-index: 1000;
 }
 .close-btn:hover {
   transform: scale(1.1);
